--- a/ProjektSklep/Views/Home/Index.cshtml
+++ b/ProjektSklep/Views/Home/Index.cshtml
@@ -5,5 +5,9 @@
     <div class="text-center">
         <h1 class="display-4">Welcome</h1>
         <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-        <p> ostatnia zmiana </p>
+        <p> NO ELO </p>
+        <p> NO ELO </p>
+        <p>NO ELO</p>
+        <p>SIEMA DODANE</p>
+        <p>Moja zmiana</p>
     </div>
