--- a/ProjektSklep/Views/Home/Index.cshtml
+++ b/ProjektSklep/Views/Home/Index.cshtml
@@ -2,12 +2,13 @@
     ViewData["Title"] = "Home Page";
 }
 
-    <div class="text-center">
-        <h1 class="display-4">Welcome</h1>
-        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-        <p> NO ELO </p>
-        <p> NO ELO </p>
-        <p>NO ELO</p>
-        <p>SIEMA DODANE</p>
-        <p>Moja zmiana</p>
-    </div>
+<div class="text-center">
+    <h1 class="display-4">Welcome</h1>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p> NO ELO </p>
+    <p> NO ELO </p>
+    <p>NO ELO</p>
+    <p>SIEMA DODANE</p>
+    <p>Moja zmiana</p>
+    <p>Moja zmiana kolejna 123123</p>
+</div>
