SIEMA, TUTAJ ZMIANA

--- a/ProjektSklep/Views/Home/Index.cshtml
+++ b/ProjektSklep/Views/Home/Index.cshtml
@@ -10,5 +10,7 @@
     <p>NO ELO</p>
     <p>SIEMA DODANE</p>
     <p>Moja zmiana</p>
-    <p>Moja zmiana kolejna 123123</p>
+
+    <p>dgasdjkgsadkaasddsfasdfgasdfjkasdgfhkasdkgfasdfjkdas</p>
+    <p>asdfhasdgjkfgasdjkfgjkasdgfjkasdgfjkasdgjkfgajksdgfjkkasdfajksdfadsfdasfa</p>
 </div>
