--- a/ProjektSklep/Views/Home/Index.cshtml
+++ b/ProjektSklep/Views/Home/Index.cshtml
@@ -11,4 +11,6 @@
     <p>SIEMA DODANE</p>
     <p>Moja zmiana</p>
     <p>Moja zmiana kolejna 123123</p>
+    <p>ELUWINA</p>
+    <p>TO JA BARTEK KURNA</p>
 </div>
