--- a/ProjektSklep/Views/Home/Index.cshtml
+++ b/ProjektSklep/Views/Home/Index.cshtml
@@ -13,4 +13,5 @@
 
     <p>dgasdjkgsadkaasddsfasdfgasdfjkasdgfhkasdkgfasdfjkdas</p>
     <p>asdfhasdgjkfgasdjkfgjkasdgfjkasdgfjkasdgjkfgajksdgfjkkasdfajksdfadsfdasfa</p>
+    <p>TO KOZIK</p>
 </div>
