--- a/ProjektSklep/Views/Home/Index.cshtml
+++ b/ProjektSklep/Views/Home/Index.cshtml
@@ -2,13 +2,22 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h1>
-    Nagłówek
-</h1>
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    
 </div>
-<footer>
-    Stopka
-</footer>
+
+
+@section Categories{ 
+    <li class="nav-item">
+        <a class="nav-link" href="#">Overview </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Overview </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Overview </a>
+    </li>
+}
+
+
+
