--- a/ProjektSklep/wwwroot/css/site.css
+++ b/ProjektSklep/wwwroot/css/site.css
@@ -1,13 +1,10 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
+﻿a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
 }
 
-/* Provide sufficient contrast against white background */
+ Provide sufficient contrast against white background 
 a {
   color: #0366d6;
 }
@@ -22,6 +19,7 @@ a {
   color: #fff;
   background-color: #1b6ec2;
   border-color: #1861ac;
+  padding: 1px;
 }
 
 /* Sticky footer styles
@@ -59,7 +57,7 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
+   /*Margin bottom by footer height */
   margin-bottom: 60px;
 }
 .footer {
@@ -67,9 +65,9 @@ body {
   bottom: 0;
   width: 100%;
   white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+  line-height: 60px;  /*Vertically center the text there */
 }
-/* bootstrap search and button*/
+ bootstrap search and button
 .has-search .form-control {
     padding-left: 2.375rem;
 }
@@ -90,3 +88,27 @@ body {
     max-height: 150px;
     overflow-y: scroll;
 }
+
+#categories {
+    list-style-type: none; /*Remove bullets */
+    padding: 1px;
+    margin: 0; /*Remove margins */
+    min-width: 150px;
+}
+
+#category {
+    border: 1px solid #ddd; /*Add a thin border to each list item*/
+    margin-top: -1px; /*Prevent double borders*/
+    background-color: #f6f6f6; /*Add a grey background color*/
+    padding: 5px; /*Add some padding*/
+    min-width: 150px;
+}
+.input-group {
+    width: inherit;
+}
+
+.navbar {
+    width: auto;
+    align-self: end;
+}
+
