--- a/ProjektSklep/Views/Shared/_Layout.cshtml
+++ b/ProjektSklep/Views/Shared/_Layout.cshtml
@@ -44,8 +44,8 @@
                 </div>*@
                 <div class="sidebar-content hidden-sm-down">
                     <ul class="list-group list-group-flush" id="categories">
-                        @RenderSection("Categories", required: true);
-                     </ul>
+                        @*@RenderSection("Categories", required: true);*@
+                    </ul>
                 </div>
 
                 <!-- CRUD --> 
