--- a/ProjektSklep/Views/Orders/Edit.cshtml
+++ b/ProjektSklep/Views/Orders/Edit.cshtml
@@ -19,6 +19,16 @@
                 <span asp-validation-for="CustomerID" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ShippingMethodID" class="control-label"></label>
+                <select asp-for="ShippingMethodID" class="form-control" asp-items="ViewBag.ShippingMethodID"></select>
+                <span asp-validation-for="ShippingMethodID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PaymentMethodID" class="control-label"></label>
+                <select asp-for="PaymentMethodID" class="form-control" asp-items="ViewBag.PaymentMethodID"></select>
+                <span asp-validation-for="PaymentMethodID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="OrderStatus" class="control-label"></label>
                 <select asp-for="OrderStatus" class="form-control"></select>
                 <span asp-validation-for="OrderStatus" class="text-danger"></span>
