--- a/ProjektSklep/Views/Shared/_Layout.cshtml
+++ b/ProjektSklep/Views/Shared/_Layout.cshtml
@@ -84,6 +84,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Experts" asp-action="Index">Experts</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ProductOrders" asp-action="Index">ProductOrders</a>
+                        </li>
                     </ul>
                 </div>
 
