--- a/ProjektSklep/Views/Addresses/Details.cshtml
+++ b/ProjektSklep/Views/Addresses/Details.cshtml
@@ -11,6 +11,12 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CustomerID)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CustomerID)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Country)
         </dt>
         <dd class = "col-sm-10">
@@ -45,12 +51,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ApartmentNumber)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Customer)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.CustomerID)
         </dd>
     </dl>
 </div>
