--- a/ProjektSklep/Views/Addresses/Edit.cshtml
+++ b/ProjektSklep/Views/Addresses/Edit.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="AddressID" />
             <div class="form-group">
                 <label asp-for="CustomerID" class="control-label"></label>
-                <select asp-for="CustomerID" class="form-control" asp-items="ViewBag.CustomerID"></select>
+                <input asp-for="CustomerID" class="form-control" />
                 <span asp-validation-for="CustomerID" class="text-danger"></span>
             </div>
             <div class="form-group">
