--- a/ProjektSklep/Views/Addresses/Index.cshtml
+++ b/ProjektSklep/Views/Addresses/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.CustomerID)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Country)
             </th>
             <th>
@@ -30,15 +33,15 @@
             <th>
                 @Html.DisplayNameFor(model => model.ApartmentNumber)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Customer)
-            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.CustomerID)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Country)
             </td>
@@ -56,9 +59,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ApartmentNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Customer.CustomerID)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.AddressID">Edit</a> |
