--- a/ProjektSklep/Views/Customers/Create.cshtml
+++ b/ProjektSklep/Views/Customers/Create.cshtml
@@ -13,6 +13,14 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="AddressID" class="control-label"></label>
+                <select asp-for="AddressID" class ="form-control" asp-items="ViewBag.AddressID"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="PageConfigurationId" class="control-label"></label>
+                <select asp-for="PageConfigurationId" class ="form-control" asp-items="ViewBag.PageConfigurationId"></select>
+            </div>
+            <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
