--- a/ProjektSklep/Views/Customers/Delete.cshtml
+++ b/ProjektSklep/Views/Customers/Delete.cshtml
@@ -47,6 +47,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.AdminRights)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Address)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Address.AddressID)
+        </dd class>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PageConfiguration)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.PageConfiguration.PageConfigurationID)
+        </dd class>
     </dl>
     
     <form asp-action="Delete">
