--- a/ProjektSklep/Views/Customers/Details.cshtml
+++ b/ProjektSklep/Views/Customers/Details.cshtml
@@ -46,6 +46,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.AdminRights)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Address)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Address.AddressID)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PageConfiguration)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.PageConfiguration.PageConfigurationID)
+        </dd>
     </dl>
 </div>
 <div>
