--- a/ProjektSklep/Views/Customers/Edit.cshtml
+++ b/ProjektSklep/Views/Customers/Edit.cshtml
@@ -14,6 +14,16 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CustomerID" />
             <div class="form-group">
+                <label asp-for="AddressID" class="control-label"></label>
+                <select asp-for="AddressID" class="form-control" asp-items="ViewBag.AddressID"></select>
+                <span asp-validation-for="AddressID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PageConfigurationId" class="control-label"></label>
+                <select asp-for="PageConfigurationId" class="form-control" asp-items="ViewBag.PageConfigurationId"></select>
+                <span asp-validation-for="PageConfigurationId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
