--- a/ProjektSklep/Views/Orders/Delete.cshtml
+++ b/ProjektSklep/Views/Orders/Delete.cshtml
@@ -23,6 +23,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Customer.CustomerID)
         </dd class>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ShippingMethod)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ShippingMethod.ShippingMethodID)
+        </dd class>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PaymentMethod)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.PaymentMethod.PaymentMethodID)
+        </dd class>
     </dl>
     
     <form asp-action="Delete">
