--- a/ProjektSklep/Views/Orders/Details.cshtml
+++ b/ProjektSklep/Views/Orders/Details.cshtml
@@ -22,6 +22,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Customer.CustomerID)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ShippingMethod)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ShippingMethod.ShippingMethodID)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PaymentMethod)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.PaymentMethod.PaymentMethodID)
+        </dd>
     </dl>
 </div>
 <div>
