--- a/ProjektSklep/Views/ShippingMethods/Create.cshtml
+++ b/ProjektSklep/Views/ShippingMethods/Create.cshtml
@@ -14,7 +14,8 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="OrderID" class="control-label"></label>
-                <select asp-for="OrderID" class ="form-control" asp-items="ViewBag.OrderID"></select>
+                <input asp-for="OrderID" class="form-control" />
+                <span asp-validation-for="OrderID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
