--- a/ProjektSklep/Views/Categories/Delete.cshtml
+++ b/ProjektSklep/Views/Categories/Delete.cshtml
@@ -23,6 +23,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Visibility)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Parent)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Parent.CategoryID)
+        </dd class>
     </dl>
     
     <form asp-action="Delete">
