--- a/ProjektSklep/Views/Categories/Edit.cshtml
+++ b/ProjektSklep/Views/Categories/Edit.cshtml
@@ -14,6 +14,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CategoryID" />
             <div class="form-group">
+                <label asp-for="ParentCategoryID" class="control-label"></label>
+                <select asp-for="ParentCategoryID" class="form-control" asp-items="ViewBag.ParentCategoryID"></select>
+                <span asp-validation-for="ParentCategoryID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
