--- a/ProjektSklep/Views/Categories/Index.cshtml
+++ b/ProjektSklep/Views/Categories/Index.cshtml
@@ -18,6 +18,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Visibility)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Parent)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -29,6 +32,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Visibility)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Parent.CategoryID)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CategoryID">Edit</a> |
