--- a/ProjektSklep/Views/Customers/Create.cshtml
+++ b/ProjektSklep/Views/Customers/Create.cshtml
@@ -17,8 +17,8 @@
                 <select asp-for="AddressID" class ="form-control" asp-items="ViewBag.AddressID"></select>
             </div>
             <div class="form-group">
-                <label asp-for="PageConfigurationId" class="control-label"></label>
-                <select asp-for="PageConfigurationId" class ="form-control" asp-items="ViewBag.PageConfigurationId"></select>
+                <label asp-for="PageConfigurationID" class="control-label"></label>
+                <select asp-for="PageConfigurationID" class ="form-control" asp-items="ViewBag.PageConfigurationID"></select>
             </div>
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
