--- a/ProjektSklep/Views/Customers/Edit.cshtml
+++ b/ProjektSklep/Views/Customers/Edit.cshtml
@@ -19,9 +19,9 @@
                 <span asp-validation-for="AddressID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PageConfigurationId" class="control-label"></label>
-                <select asp-for="PageConfigurationId" class="form-control" asp-items="ViewBag.PageConfigurationId"></select>
-                <span asp-validation-for="PageConfigurationId" class="text-danger"></span>
+                <label asp-for="PageConfigurationID" class="control-label"></label>
+                <select asp-for="PageConfigurationID" class="form-control" asp-items="ViewBag.PageConfigurationID"></select>
+                <span asp-validation-for="PageConfigurationID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
