Podstawowy koszyk jeszcze do ulepszenia

--- a/ProjektSklep/Views/Shared/_Layout.cshtml
+++ b/ProjektSklep/Views/Shared/_Layout.cshtml
@@ -26,8 +26,9 @@
             </div>
             <div>
                 <nav class="navbar navbar-light bg-light">
+                    <a class="bg-success text-dark" asp-controller="ShoppingCart" asp-action="Index">Koszyk</a>
                     <button class="btn btn-secondary" type="button"> Ustawienia </button> &nbsp;
-                   
+
                     <button class="btn btn-secondary" type="button"> Zaloguj się </button>
                 </nav>
             </div>
