--- a/ProjektSklep/Views/Shared/_PartialProduct.cshtml
+++ b/ProjektSklep/Views/Shared/_PartialProduct.cshtml
@@ -1,6 +1,6 @@
 ﻿
 
-<a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+<div class="list-group-item list-group-item-action flex-column align-items-start">
     <img src="@Url.Content(@Model.Image)" style="height: 100px; width: 150px;" />
 
     <div style="float:right; width:80%;">
@@ -8,8 +8,9 @@
             <h5 class="mb-1">@Model.Name</h5>
             <small>@Model.Price PLN</small>
         </div>
+        <a class="bg-success text-dark" asp-action="ShoppingCartAddProduct" asp-route-ProductId="@Model.ProductID">Add To Cart</a>
         <p class="mb-1">@Model.ProductDescription</p>
         <small>Kategoria: @Model.Category.Name</small>
     </div>
     <div style="clear:both; font-size:1px;"></div>
-</a>
+</div>
