Poprawiony koszyk z usuwaniem elegancki

--- a/ProjektSklep/Views/Shared/_Layout.cshtml
+++ b/ProjektSklep/Views/Shared/_Layout.cshtml
@@ -26,9 +26,8 @@
             </div>
             <div>
                 <nav class="navbar navbar-light bg-light">
-                    <a class="bg-success text-dark" asp-controller="ShoppingCart" asp-action="Index">Koszyk</a>
+                    <a class="btn btn-secondary" asp-controller="ShoppingCart" asp-action="Index">Koszyk</a> &nbsp;
                     <button class="btn btn-secondary" type="button"> Ustawienia </button> &nbsp;
-
                     <button class="btn btn-secondary" type="button"> Zaloguj się </button>
                 </nav>
             </div>
