Możliwość zamówienia koszyka bez dodania do bazy

--- a/ProjektSklep/Views/ShoppingCart/Index.cshtml
+++ b/ProjektSklep/Views/ShoppingCart/Index.cshtml
@@ -50,3 +50,4 @@
 </table>
 
 <h2>Razem do zapłaty: @Model.CartPrice</h2>
+<a class="btn btn-primary" asp-action="OrderCompleted">Zamów produkty</a>
