Dodanie widoku logowania

--- a/ProjektSklep/Views/Shared/_Layout.cshtml
+++ b/ProjektSklep/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                 <nav class="navbar navbar-light bg-light">
                     <a class="btn btn-secondary" asp-controller="ShoppingCart" asp-action="Index">Koszyk</a> &nbsp;
                     <button class="btn btn-secondary" type="button"> Ustawienia </button> &nbsp;
-                    <button class="btn btn-secondary" type="button"> Zaloguj się </button>
+                    <a class="btn btn-secondary" asp-controller="Customers" asp-action="Login" > Zaloguj się </a>
                 </nav>
             </div>
         </nav>
