zakomentowane zalaczniki niegrzeczne

--- a/ProjektSklep/Views/Shared/_LayoutAdminPanel.cshtml
+++ b/ProjektSklep/Views/Shared/_LayoutAdminPanel.cshtml
@@ -49,7 +49,7 @@
                     </ul>
 
                     <!--Kod do obslugi zalacznikow-->
-                    <h2>File uploader</h2>
+                    <!--<h2>File uploader</h2>
                     <form method="post" enctype="multipart/form-data" asp-controller="FileUpload" asp-action="Index">
                         <div class="form-group">
                             <div class="col-md-10">
@@ -63,7 +63,8 @@
                                 @ViewData["ExtensionWarning"]
                             </div>
                         </div>
-                    </form>
+                    </form>-->
+
                 </div>
             </nav>
             <div class="container" style="margin: 0px 0px; margin-left: 10px;">
