--- a/ProjektSklep/Views/Addresses/Index.cshtml
+++ b/ProjektSklep/Views/Addresses/Index.cshtml
@@ -14,6 +14,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.AddressID)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.CustomerID)
             </th>
             <th>
@@ -40,6 +43,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.AddressID)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CustomerID)
             </td>
