--- a/ProjektSklep/Views/Categories/Create.cshtml
+++ b/ProjektSklep/Views/Categories/Create.cshtml
@@ -13,9 +13,14 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <!--<div class="form-group">
+                <label asp-for="ParentCategoryID" class="control-label"></label>
+                <select asp-for="ParentCategoryID" class="form-control" asp-items="ViewBag.ParentCategoryID"></select>
+            </div>-->
             <div class="form-group">
                 <label asp-for="ParentCategoryID" class="control-label"></label>
-                <select asp-for="ParentCategoryID" class ="form-control" asp-items="ViewBag.ParentCategoryID"></select>
+                <input asp-for="ParentCategoryID" class="form-control" />
+                <span asp-validation-for="ParentCategoryID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
