--- a/ProjektSklep/Views/Categories/Edit.cshtml
+++ b/ProjektSklep/Views/Categories/Edit.cshtml
@@ -14,9 +14,14 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CategoryID" />
-            <div class="form-group">
+            <!--<div class="form-group">
                 <label asp-for="ParentCategoryID" class="control-label"></label>
                 <select asp-for="ParentCategoryID" class="form-control" asp-items="ViewBag.ParentCategoryID"></select>
+                <span asp-validation-for="ParentCategoryID" class="text-danger"></span>
+            </div>-->
+            <div class="form-group">
+                <label asp-for="ParentCategoryID" class="control-label"></label>
+                <input asp-for="ParentCategoryID" class="form-control" />
                 <span asp-validation-for="ParentCategoryID" class="text-danger"></span>
             </div>
             <div class="form-group">
