--- a/ProjektSklep/Views/Orders/Create.cshtml
+++ b/ProjektSklep/Views/Orders/Create.cshtml
@@ -27,7 +27,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="OrderStatus" class="control-label"></label>
-                <select asp-for="OrderStatus" class="form-control"></select>
+                <select asp-for="OrderStatus" class="form-control" asp-items="ViewBag.OrderStatus"></select>
                 <span asp-validation-for="OrderStatus" class="text-danger"></span>
             </div>
             <div class="form-group">
