--- a/ProjektSklep/Views/Orders/Delete.cshtml
+++ b/ProjektSklep/Views/Orders/Delete.cshtml
@@ -22,19 +22,19 @@
             @Html.DisplayNameFor(model => model.Customer)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.CustomerID)
+            @Html.DisplayFor(model => model.Customer.Email)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ShippingMethod)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ShippingMethod.ShippingMethodID)
+            @Html.DisplayFor(model => model.ShippingMethod.Name)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PaymentMethod)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PaymentMethod.PaymentMethodID)
+            @Html.DisplayFor(model => model.PaymentMethod.Name)
         </dd class>
     </dl>
     
