--- a/ProjektSklep/Views/Orders/Details.cshtml
+++ b/ProjektSklep/Views/Orders/Details.cshtml
@@ -21,19 +21,19 @@
             @Html.DisplayNameFor(model => model.Customer)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.CustomerID)
+            @Html.DisplayFor(model => model.Customer.Email)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ShippingMethod)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ShippingMethod.ShippingMethodID)
+            @Html.DisplayFor(model => model.ShippingMethod.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PaymentMethod)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PaymentMethod.PaymentMethodID)
+            @Html.DisplayFor(model => model.PaymentMethod.Name)
         </dd>
     </dl>
 </div>
