Zamówienia dodawane do bazy danych, możliwość użycia kodu rabatowego. Narazie wszystko zamawia klient klientowski trzeba dodać logowanie i odczytywać id zalogowanego klienta przy dodawaniu ordera.

--- a/ProjektSklep/Views/ShoppingCart/OrderCompleted.cshtml
+++ b/ProjektSklep/Views/ShoppingCart/OrderCompleted.cshtml
@@ -51,5 +51,9 @@ else
         </tbody>
     </table>
 
-    <h2>Razem do zapłaty: @Model.CartPrice</h2>
+    <h3>Sposób wysyłki: @ViewBag.ShippingMethod</h3>
+    <h3>Sposób płatności: @ViewBag.PaymentMethod</h3>
+    <h3>Rabat: @ViewBag.DiscountCode%</h3>
+    <h3>Razem do zapłaty (przed rabatem): @ViewBag.CenaBezRabatu</h3>
+    <h3>Razem do zapłaty: @Model.CartPrice</h3>
 }
