--- a/ProjektSklep/Views/ShoppingCart/Index.cshtml
+++ b/ProjektSklep/Views/ShoppingCart/Index.cshtml
@@ -28,26 +28,44 @@
     <tbody>
         @foreach (var item in Model.ProductList)
         {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Product.Name)
-            </td>
-            <td>
-                <img src="@Url.Content(item.Product.Image)" style="height: 100px; width: 150px;" />
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Count)
-            </td>
-            <td>
-                @item.Sum
-            </td>
-            <td>
-                <a class="btn btn-danger" asp-action="Index" asp-route-ProductID="@item.Product.ProductID">Delete</a>
-            </td>
-        </tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Product.Name)
+                </td>
+                <td>
+                    <img src="@Url.Content(item.Product.Image)" style="height: 100px; width: 150px;" />
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Count)
+                </td>
+                <td>
+                    @item.Sum
+                </td>
+                <td>
+                    <a class="btn btn-danger" asp-action="Index" asp-route-ProductID="@item.Product.ProductID">Delete</a>
+                </td>
+            </tr>
         }
     </tbody>
 </table>
 
-<h2>Razem do zapłaty: @Model.CartPrice</h2>
-<a class="btn btn-primary" asp-action="OrderCompleted">Zamów produkty</a>
+<form asp-action="OrderCompleted">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="form-group">
+        <h4>Sposób wysyłki: </h4>
+        <select asp-for="ShippingMethodID" class="form-control" asp-items="ViewBag.ShippingMethods"></select>
+    </div>
+    <div class="form-group">
+        <h4>Sposób płatności: </h4>
+        <select asp-for="PaymentMethodID" class="form-control" asp-items="ViewBag.PaymentMethods"></select>
+    </div>
+    <div class="form-group">
+        <h4>Kod rabatowy: </h4>
+        <input asp-for="DiscountCode" class="form-control" />
+        <span asp-validation-for="DiscountCode" class="text-danger"></span>
+    </div>
+    <h2>Razem do zapłaty: @Model.countCartPrice()</h2>
+    <div class="form-group">
+        <input type="submit" value="Zamów produkty" class="btn btn-primary" />
+    </div>
+</form>
